--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,8 +55,16 @@ body{
     color: #fff;
     font-family: 'Pacifico' , cursive;
     padding-left: 70px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    text-align: center;
+    text-decoration: underline;
 }
 
+.page-header a:hover {
+    cursor: pointer;
+    color: black;
+}
 .page-header span{
     margin-left: 5px;
     color: #1dd1a1;
@@ -65,6 +73,7 @@ body{
 /* Nav menu*/
 .nav-menu{
     padding: 10px 0 10px 120px;
+    text-align: center;
 }
 
 .nav-menu a{
@@ -84,8 +93,7 @@ body{
 
 /* Header image*/
 .header-image{
-    background-image: linear-gradient(rgba(25,0,10, 0.7 ), rgba(0,20,0, 
-    0.7)),url(../img/9.jpg);
+    background-image: url(../img/backro.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -128,46 +136,26 @@ body{
     font-weight: 300;
 }
 
-.journey-ways h2 span{
-    color: #1dd1a1;
-    font-weight: 700;
-}
-
-#journey-explain{
-    color: #222f3e;
+.patron1 {
     text-align: center;
-    margin-top: 15px;
+    padding-right: 70px;
 }
 
-.travel-ways{
-    display: flex;
-    margin-top: 50px; 
-    justify-content: space-between;
-    text-align: center;
+.patron{
+    border: 4px solid #F46571;
+    cursor: pointer;
+    filter: grayscale(0%);
+    transition: all .3s ease-in-out;
+    border-color: white;
+    padding-bottom: -70px;
 }
 
-.ways-to-travel{
-    width: 30%;
-    
-}
-
-.ways-to-travel:nth-child(2) {
-    margin-top: 30px;
-}
-
-.ways-to-travel h3{
-    margin-top: 30px;
-    text-transform: uppercase;
-    color: #222f3e;
-}
-
-.ways-to-travel h3 span{
-    color: #1dd1a1;
-}
-
-.ways-to-travel{
-    margin-top: 10px;
-    color: #222f3e;
+.patron img:hover{
+    filter: none;
+    border-radius: 50%;
+    filter: grayscale(100%)
+    cursor: pointer; 
+    transform: scale(1.1)
 }
 
 
